@@ -10,6 +10,10 @@ PHP                                                                        NEWS
   . Fixed bug #70715 (Segmentation fault inside soap client). (Laruence)
   . Fixed bug #70709 (SOAP Client generates Segfault). (Laruence)
 
+- Opcache:
+  . Fixed bug #70724 (Undefined Symbols from opcache.so on Mac OS X 10.10).
+    (Laruence)
+
 - XSL:
   . Fixed bug #70678 (PHP7 returns true when false is expected). (Felipe) 
 
